--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
-    "next": "15.0.4",
+    "next": "^15.2.3",
     "next-themes": "^0.4.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-image-gallery": "^1.3.0",
     "react-localization": "^1.0.19",
