--- a/package.json
+++ b/package.json
@@ -23,20 +23,25 @@
     "@heroui/system": "2.4.6",
     "@heroui/theme": "2.4.5",
     "@photo-sphere-viewer/core": "^5.11.5",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@react-aria/visually-hidden": "3.8.18",
-    "clsx": "2.1.1",
-    "framer-motion": "11.13.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.13.1",
     "intl-messageformat": "^10.5.0",
+    "lucide-react": "^0.522.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-image-gallery": "^1.3.0",
     "react-localization": "^1.0.19",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "20.5.7",
